# sorobanathon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
trait_contract/: Cargo.toml  README.md
trait_contract/src/: lib.rs  tests.rs  types.rs
